git-svn-id: https://svn.kuali.org/repos/foundation/trunk@2339 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/ec2admin/pom.xml
+++ b/ec2admin/pom.xml
@@ -99,7 +99,7 @@
       <id>resetall</id>
       <properties>
         <ant.target>resetall</ant.target>
-        <ant.phase>process.resources</ant.phase>
+        <ant.phase>process-resources</ant.phase>
       </properties>
     </profile>
     <profile>
