--- a/ec2admin/pom.xml
+++ b/ec2admin/pom.xml
@@ -116,6 +116,10 @@
     </profile>
     <profile>
       <id>tomcat</id>
+      <properties>
+        <ant.phase>process-resources</ant.phase>
+        <ant.target>installtomcat</ant.target>
+      </properties>
       <build>
         <plugins>
           <plugin>
@@ -137,23 +141,6 @@
                       <type>zip</type>
                     </artifactItem>
                   </artifactItems>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-          <plugin>
-            <artifactId>maven-antrun-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>install-tomcat</id>
-                <phase>process-resources</phase>
-                <goals>
-                  <goal>run</goal>
-                </goals>
-                <configuration>
-                  <target>
-                    <ant antfile="build.xml" target="installtomcat" />
-                  </target>
                 </configuration>
               </execution>
             </executions>
