git-svn-id: https://svn.kuali.org/repos/foundation/trunk@2342 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/ec2admin/pom.xml
+++ b/ec2admin/pom.xml
@@ -127,7 +127,7 @@
             <executions>
               <execution>
                 <id>get-tomcat</id>
-                <phase>process-resources</phase>
+                <phase>initialize</phase>
                 <goals>
                   <goal>copy</goal>
                 </goals>
