git-svn-id: https://svn.kuali.org/repos/foundation/trunk@2345 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/ec2admin/pom.xml
+++ b/ec2admin/pom.xml
@@ -60,7 +60,7 @@
           <version>1.6</version>
           <configuration>
             <target>
-              <echo>Ant - [phase:${ant.phase} target: ${ant.target}]</echo>
+              <echo>Ant - [phase:${ant.phase}, target: ${ant.target}]</echo>
               <ant antfile="build.xml" target="${ant.target}" />
             </target>
           </configuration>
