git-svn-id: https://svn.kuali.org/repos/foundation/ks@2357 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/ks-lum-ui-1.2-selenium/pom.xml
+++ b/ks-lum-ui-1.2-selenium/pom.xml
@@ -194,6 +194,15 @@
                 <exclude>org/kuali/student/lum/ui/requirements/uti/*.java</exclude>
               </excludes>
             </configuration>
+            <executions>
+              <execution>
+                <id>integration-test</id>
+                <phase>integration-test</phase>
+                <goals>
+                  <goal>test</goal>
+                </goals>
+              </execution>
+            </executions>
           </plugin>
           <!-- Publish jar in order to inherit tests in different module -->
           <plugin>
