--- a/ks-lum-ui-1.2-selenium/pom.xml
+++ b/ks-lum-ui-1.2-selenium/pom.xml
@@ -188,6 +188,9 @@
                 <selenium.platform>ANY</selenium.platform>
                 <selenium.baseurl>http://dev.ks.kuali.org</selenium.baseurl>
               </systemPropertyVariables>
+              <includes>
+                <include>**/SimpleTest.java</include>
+              </includes>
               <excludes>
                 <exclude>org/kuali/student/lum/lu/assembly/*.java</exclude>
                 <exclude>org/kuali/student/lum/ui/*.java</exclude>
