git-svn-id: https://svn.kuali.org/repos/foundation/ks@2368 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/ks-lum-ui-1.2-selenium/pom.xml
+++ b/ks-lum-ui-1.2-selenium/pom.xml
@@ -196,6 +196,7 @@
                 <exclude>org/kuali/student/lum/ui/*.java</exclude>
                 <exclude>org/kuali/student/lum/ui/requirements/uti/*.java</exclude>
               </excludes>
+              <skip>true</skip>
             </configuration>
             <executions>
               <execution>
@@ -204,6 +205,9 @@
                 <goals>
                   <goal>test</goal>
                 </goals>
+                <configuration>
+                  <skip>false</skip>
+                </configuration>
               </execution>
             </executions>
           </plugin>
