--- a/ks-lum-ui-1.2-selenium/pom.xml
+++ b/ks-lum-ui-1.2-selenium/pom.xml
@@ -141,6 +141,9 @@
 
     <profile>
       <id>selenium</id>
+      <properties>
+        <selenium.xvfb.phase>pre-integration-test</selenium.xvfb.phase>
+      </properties>
       <build>
         <plugins>
           <plugin>
@@ -150,7 +153,7 @@
             <executions>
               <execution>
                 <id>xvfb</id>
-                <phase>pre-integration-test</phase>
+                <phase>${selenium.xvfb.phase}</phase>
                 <goals>
                   <goal>xvfb</goal>
                 </goals>
