git-svn-id: https://svn.kuali.org/repos/foundation/ks@2375 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/ks-lum-ui-1.2-selenium/pom.xml
+++ b/ks-lum-ui-1.2-selenium/pom.xml
@@ -143,6 +143,7 @@
       <id>selenium</id>
       <properties>
         <selenium.xvfb.phase>pre-integration-test</selenium.xvfb.phase>
+        <selenium.include>**/SimpleSeleniumTest.java</selenium.include>
       </properties>
       <build>
         <plugins>
@@ -192,7 +193,7 @@
                 <selenium.baseurl>http://dev.ks.kuali.org</selenium.baseurl>
               </systemPropertyVariables>
               <includes>
-                <include>**/SimpleSeleniumTest.java</include>
+                <include>${selenium.include}</include>
               </includes>
               <excludes>
                 <exclude>org/kuali/student/lum/lu/assembly/*.java</exclude>
