git-svn-id: https://svn.kuali.org/repos/foundation/ks@2382 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/ks-lum-ui-1.2-selenium/pom.xml
+++ b/ks-lum-ui-1.2-selenium/pom.xml
@@ -145,7 +145,7 @@
         <selenium.xvfb.phase>pre-integration-test</selenium.xvfb.phase>
         <selenium.start.phase>pre-integration-test</selenium.start.phase>
         <selenium.stop.phase>post-integration-test</selenium.stop.phase>
-        <selenium.include>**/SimpleSeleniumTest.java</selenium.include>
+        <selenium.include>**/*NewTest.java</selenium.include>
       </properties>
       <build>
         <plugins>
