git-svn-id: https://svn.kuali.org/repos/foundation/ks@2394 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/ks-lum-ui-1.2-selenium/pom.xml
+++ b/ks-lum-ui-1.2-selenium/pom.xml
@@ -186,7 +186,7 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
             <configuration>
-              <forkMode>always</forkMode>
+              <forkMode>never</forkMode>
               <systemPropertyVariables>
                 <selenium.remote>false</selenium.remote>
                 <selenium.browser>firefox</selenium.browser>
