--- a/ks-lum-ui-1.2-selenium/pom.xml
+++ b/ks-lum-ui-1.2-selenium/pom.xml
@@ -160,6 +160,9 @@
                 <goals>
                   <goal>xvfb</goal>
                 </goals>
+                <configuration>
+                  <display>:1</display>
+                </configuration>
               </execution>
               <execution>
                 <id>start-selenium-server</id>
@@ -186,7 +189,7 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
             <configuration>
-              <forkMode>never</forkMode>
+              <forkMode>always</forkMode>
               <systemPropertyVariables>
                 <selenium.remote>false</selenium.remote>
                 <selenium.browser>firefox</selenium.browser>
