git-svn-id: https://svn.kuali.org/repos/foundation/ks@2400 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/ks-lum-ui-1.2-selenium/pom.xml
+++ b/ks-lum-ui-1.2-selenium/pom.xml
@@ -23,7 +23,7 @@
     </repository>
   </repositories>
   <properties>
-    <selenium.xvfb.phase>none</selenium.xvfb.phase>
+    <selenium.xvfb.phase>test</selenium.xvfb.phase>
   </properties>
   <build>
     <plugins>
