--- a/ks-lum-ui-1.2-selenium/pom.xml
+++ b/ks-lum-ui-1.2-selenium/pom.xml
@@ -23,7 +23,7 @@
     </repository>
   </repositories>
   <properties>
-    <selenium.xvfb.phase>test</selenium.xvfb.phase>
+    <selenium.xvfb.phase>none</selenium.xvfb.phase>
   </properties>
   <build>
     <plugins>
@@ -149,7 +149,7 @@
         </os>
       </activation>
       <properties>
-        <selenium.xvfb.phase>pre-integration-test</selenium.xvfb.phase>
+        <selenium.xvfb.phase>test</selenium.xvfb.phase>
       </properties>
     </profile>
     <profile>
