--- a/ks-lum-ui-1.2-selenium/pom.xml
+++ b/ks-lum-ui-1.2-selenium/pom.xml
@@ -22,9 +22,6 @@
       </snapshots>
     </repository>
   </repositories>
-  <properties>
-    <selenium.xvfb.phase>none</selenium.xvfb.phase>
-  </properties>
   <build>
     <plugins>
       <plugin>
@@ -142,20 +139,36 @@
       </dependencies>
     </profile>
     <profile>
-      <id>unix</id>
+      <id>xvfb</id>
       <activation>
-        <os>
-          <family>unix</family>
-        </os>
+        <property>
+          <name>selenium.headless</name>
+        </property>
       </activation>
-      <properties>
-        <selenium.xvfb.phase>test</selenium.xvfb.phase>
-      </properties>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>selenium-maven-plugin</artifactId>
+            <version>2.0</version>
+            <executions>
+              <execution>
+                <id>xvfb</id>
+                <phase>test</phase>
+                <goals>
+                  <goal>xvfb</goal>
+                </goals>
+                <configuration>
+                  <display>:1</display>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
     </profile>
     <profile>
-      <id>smoketest</id>
-      <properties>
-      </properties>
+      <id>selenium</id>
       <build>
         <plugins>
           <plugin>
