git-svn-id: https://svn.kuali.org/repos/foundation/ks@2405 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/ks-lum-ui-1.2-selenium/pom.xml
+++ b/ks-lum-ui-1.2-selenium/pom.xml
@@ -139,7 +139,7 @@
       </dependencies>
     </profile>
     <profile>
-      <id>xvfb</id>
+      <id>headless</id>
       <build>
         <plugins>
           <plugin>
