git-svn-id: https://svn.kuali.org/repos/foundation/ks@2406 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/ks-lum-ui-1.2-selenium/pom.xml
+++ b/ks-lum-ui-1.2-selenium/pom.xml
@@ -149,7 +149,7 @@
             <executions>
               <execution>
                 <id>xvfb</id>
-                <phase>test</phase>
+                <phase>initialize</phase>
                 <goals>
                   <goal>xvfb</goal>
                 </goals>
