git-svn-id: https://svn.kuali.org/repos/foundation/ks@2419 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/ks-lum-ui-1.2-selenium/pom.xml
+++ b/ks-lum-ui-1.2-selenium/pom.xml
@@ -182,6 +182,9 @@
                 <selenium.platform>ANY</selenium.platform>
                 <selenium.baseurl>http://dev.ks.kuali.org</selenium.baseurl>
               </systemPropertyVariables>
+              <environmentVariables>
+                <display>:20</display>
+              </environmentVariables>
               <includes>
                 <include>${selenium.include}</include>
               </includes>
