--- a/ks-lum-ui-1.2-selenium/pom.xml
+++ b/ks-lum-ui-1.2-selenium/pom.xml
@@ -214,7 +214,8 @@
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
       <artifactId>selenium-java</artifactId>
-      <version>2.5.0</version>
+      <version>2.8.0</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 </project>
