--- a/ks-lum-ui-1.2-selenium/pom.xml
+++ b/ks-lum-ui-1.2-selenium/pom.xml
@@ -165,6 +165,7 @@
         <selenium.include>**/selenium/**/*Test.java</selenium.include>
       </properties>
       <build>
+
         <plugins>
           <!-- Setup Selenium browser configuration -->
           <plugin>
@@ -189,10 +190,15 @@
           </plugin>
         </plugins>
       </build>
+      <dependencies></dependencies>
     </profile>
   </profiles>
 
   <dependencies>
+    <dependency>
+      <groupId>org.seleniumhq.selenium</groupId>
+      <artifactId>selenium-java</artifactId>
+    </dependency>
     <dependency>
       <groupId>org.kuali.student.lum</groupId>
       <artifactId>ks-lum-program</artifactId>
@@ -209,12 +215,6 @@
       <groupId>org.kuali.student.lum</groupId>
       <artifactId>ks-lum-impl</artifactId>
       <version>${project.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.seleniumhq.selenium</groupId>
-      <artifactId>selenium-java</artifactId>
-      <version>2.8.0</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
