Updating to clone to unicode db
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5845 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kc/krunicode/deploy.cfg
+++ b/kc/krunicode/deploy.cfg
@@ -8,3 +8,5 @@ dbParent=release
 import.torque.database.user=krunicode
 import.torque.database.schema=krunicode
 import.torque.database.password=unicode174kr
+# overriding to go to unicode db
+import.torque.database.url=jdbc:oracle:thin:@localhost:1521:unicode
