--- a/maven-dnsme-plugin/pom.xml
+++ b/maven-dnsme-plugin/pom.xml
@@ -25,7 +25,8 @@
     <dependency>
       <groupId>net.sf.json-lib</groupId>
       <artifactId>json-lib</artifactId>
-      <version>2.3</version>
+      <version>2.4</version>
+      <classifier>jdk15</classifier>
     </dependency>
     <dependency>
       <groupId>commons-io</groupId>
