--- a/maven-dnsme-plugin/pom.xml
+++ b/maven-dnsme-plugin/pom.xml
@@ -23,6 +23,11 @@
   </scm>
   <dependencies>
     <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>1.7.2</version>
+    </dependency>
+    <dependency>
       <groupId>net.sf.json-lib</groupId>
       <artifactId>json-lib</artifactId>
       <version>2.4</version>
