--- a/maven-dnsme-plugin/pom.xml
+++ b/maven-dnsme-plugin/pom.xml
@@ -22,6 +22,11 @@
   </scm>
   <dependencies>
     <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>1.7.2</version>
+    </dependency>
+    <dependency>
       <groupId>commons-lang</groupId>
       <artifactId>commons-lang</artifactId>
       <version>2.6</version>
