--- a/impex/build.xml
+++ b/impex/build.xml
@@ -1119,7 +1119,7 @@ END;
 					<arg value="--password=${import.torque.database.password}"/>
     				<arg value="--defaultSchemaName=${import.torque.database.schema}" />
     				<arg value="--changeLogFile=@{file.name}" />
-    				<arg value="--logLevel=finest" />
+    				<arg value="--logLevel=info" />
     				<arg value="--contexts=${post.import.liquibase.contexts}" />
     				<arg value="update" />
     			</java>
