git-svn-id: https://svn.kuali.org/repos/foundation/trunk@2597 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kuali-beanstalk/pom.xml
+++ b/kuali-beanstalk/pom.xml
@@ -36,6 +36,7 @@
             <restApiUrl>http://api.dnsmadeeasy.com/V1.2</restApiUrl>
             <domainName>kuali.org</domainName>
             <recordType>CNAME</recordType>
+            <recordValue>${dnsme.recordValue}.</recordValue>
           </configuration>
         </plugin>
       </plugins>
