--- a/kuali-beanstalk/pom.xml
+++ b/kuali-beanstalk/pom.xml
@@ -36,6 +36,10 @@
             <restApiUrl>http://api.dnsmadeeasy.com/V1.2</restApiUrl>
             <domainName>kuali.org</domainName>
             <recordType>CNAME</recordType>
+            <!-- 
+              Automatically append a dot here since we are almost always adding a fully qualified DNS name
+              Without the dot, DNSME adds 'kuali.org' as a suffix to whatever value we provide
+             -->
             <recordValue>${dnsme.recordValue}.</recordValue>
           </configuration>
         </plugin>
