--- a/db/impex/pom.xml
+++ b/db/impex/pom.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Copyright 2007-2009 The Kuali Foundation Licensed under the Educational 
-	Community License, Version 2.0 (the "License"); you may not use this file 
-	except in compliance with the License. You may obtain a copy of the License 
-	at http://www.opensource.org/licenses/ecl2.php Unless required by applicable 
-	law or agreed to in writing, software distributed under the License is distributed 
-	on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either 
-	express or implied. See the License for the specific language governing permissions 
-	and limitations under the License. -->
+<!-- Copyright 2007-2009 The Kuali Foundation Licensed under the Educational
+  Community License, Version 2.0 (the "License"); you may not use this file
+  except in compliance with the License. You may obtain a copy of the License
+  at http://www.opensource.org/licenses/ecl2.php Unless required by applicable
+  law or agreed to in writing, software distributed under the License is distributed
+  on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either
+  express or implied. See the License for the specific language governing permissions
+  and limitations under the License. -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <name>Rice Impex</name>
   <modelVersion>4.0.0</modelVersion>
@@ -72,10 +72,10 @@
       SELECT 1
     </impex.mysql.sql.validate>
     <!--
-      MySQL does not have DROP USER IF EXISTS.  So we grant permissions on *.*
+      MySQL does not have DROP USER IF EXISTS. So we grant permissions on *.*
       This creates a user if they don't exist (but doesn't error out if they already do),
       Then immediately drop them
-     -->
+    -->
     <impex.mysql.sql.drop>
       DROP DATABASE IF EXISTS ${impex.database}
       /
@@ -90,7 +90,8 @@
       CREATE DATABASE IF NOT EXISTS ${impex.database}
       DEFAULT CHARACTER SET
       '${sql.mysql.character.set}'
-      DEFAULT COLLATE '${sql.mysql.collate}'
+      DEFAULT COLLATE
+      '${sql.mysql.collate}'
       /
 
       CREATE USER '${impex.username}'@'%' IDENTIFIED
@@ -114,7 +115,8 @@
       EXECUTE IMMEDIATE 'DROP USER ${impex.username} CASCADE';
       EXCEPTION WHEN OTHERS THEN
       IF
-      SQLCODE != ${sql.oracle.error.userDoesNotExist} THEN
+      SQLCODE !=
+      ${sql.oracle.error.userDoesNotExist} THEN
       RAISE;
       END IF;
       END;
@@ -127,7 +129,8 @@
       IDENTIFIED BY ${impex.password}
       DEFAULT TABLESPACE
       ${impex.oracle.defaultTablespace}
-      TEMPORARY TABLESPACE ${impex.oracle.temporaryTablespace}
+      TEMPORARY
+      TABLESPACE ${impex.oracle.temporaryTablespace}
       QUOTA
       ${impex.oracle.quota} ON ${impex.oracle.defaultTablespace}
       /
@@ -379,6 +382,17 @@
           ${impex.oracle.sql.grants}
         </impex.sql.initialize>
         <impex.generate.sql.mysql.phase>none</impex.generate.sql.mysql.phase>
+      </properties>
+    </profile>
+    <profile>
+      <id>rds</id>
+      <properties>
+        <impex.username>RICETEMP</impex.username>
+        <impex.password>RICETEMP</impex.password>
+        <impex.dba.username>master</impex.dba.username>
+        <impex.url>jdbc:oracle:thin:@oracle.rice.kuali.org:1521:ORACLE</impex.url>
+        <impex.dba.url>jdbc:oracle:thin:@oracle.rice.kuali.org:1521:ORACLE</impex.dba.url>
+        <impex.database>RICETEMP</impex.database>
       </properties>
     </profile>
     <profile>
