git-svn-id: https://svn.kuali.org/repos/foundation/sandbox/rice-2.0@2608 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/db/impex/master/pom.xml
+++ b/db/impex/master/pom.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Copyright 2007-2009 The Kuali Foundation Licensed under the Educational 
-	Community License, Version 2.0 (the "License"); you may not use this file 
-	except in compliance with the License. You may obtain a copy of the License 
-	at http://www.opensource.org/licenses/ecl2.php Unless required by applicable 
-	law or agreed to in writing, software distributed under the License is distributed 
-	on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either 
-	express or implied. See the License for the specific language governing permissions 
-	and limitations under the License. -->
+<!-- Copyright 2007-2009 The Kuali Foundation Licensed under the Educational
+  Community License, Version 2.0 (the "License"); you may not use this file
+  except in compliance with the License. You may obtain a copy of the License
+  at http://www.opensource.org/licenses/ecl2.php Unless required by applicable
+  law or agreed to in writing, software distributed under the License is distributed
+  on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either
+  express or implied. See the License for the specific language governing permissions
+  and limitations under the License. -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <name>Rice Impex Master</name>
   <modelVersion>4.0.0</modelVersion>
@@ -20,4 +20,17 @@
     <impex.username>RICE</impex.username>
     <impex.password>RICE</impex.password>
   </properties>
+  <profiles>
+    <profile>
+      <id>rds</id>
+      <properties>
+        <impex.username>RICETEMP</impex.username>
+        <impex.password>RICETEMP</impex.password>
+        <impex.dba.username>master</impex.dba.username>
+        <impex.url>jdbc:oracle:thin:@oracle.rice.kuali.org:1521:ORACLE</impex.url>
+        <impex.dba.url>jdbc:oracle:thin:@oracle.rice.kuali.org:1521:ORACLE</impex.dba.url>
+        <impex.database>RICETEMP</impex.database>
+      </properties>
+    </profile>
+  </profiles>
 </project>
