--- a/db/impex/master/pom.xml
+++ b/db/impex/master/pom.xml
@@ -32,5 +32,37 @@
         <impex.database>RICETEMP</impex.database>
       </properties>
     </profile>
+    <profile>
+      <id>demo</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.kuali.maven.plugins</groupId>
+            <artifactId>sql-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>server-dataset-cleanup</id>
+                <phase>process-resources</phase>
+                <goals>
+                  <goal>execute</goal>
+                </goals>
+                <configuration>
+                  <resourceLocations>
+                    <resourceLocation>classpath:demo/server-dataset-cleanup.sql</resourceLocation>
+                  </resourceLocations>
+                </configuration>
+              </execution>
+            </executions>
+            <dependencies>
+              <dependency>
+                <groupId>org.kuali.rice</groupId>
+                <artifactId>rice-sql</artifactId>
+                <version>${project.version}</version>
+              </dependency>
+            </dependencies>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
   </profiles>
 </project>
