git-svn-id: https://svn.kuali.org/repos/foundation/sandbox/rice-2.0@2614 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/db/impex/pom.xml
+++ b/db/impex/pom.xml
@@ -19,6 +19,8 @@
   <packaging>pom</packaging>
   <modules>
     <module>master</module>
+    <module>demo</module>
+    <module>bootstrap</module>
   </modules>
   <properties>
     <sql.plugin.escapeProcessing>false</sql.plugin.escapeProcessing>
