--- a/db/impex/master/pom.xml
+++ b/db/impex/master/pom.xml
@@ -24,46 +24,10 @@
     <profile>
       <id>rds</id>
       <properties>
-        <impex.username>RICETEMP</impex.username>
-        <impex.password>RICETEMP</impex.password>
-        <impex.dba.username>master</impex.dba.username>
-        <impex.url>jdbc:oracle:thin:@oracle.rice.kuali.org:1521:ORACLE</impex.url>
-        <impex.dba.url>jdbc:oracle:thin:@oracle.rice.kuali.org:1521:ORACLE</impex.dba.url>
-        <impex.database>RICETEMP</impex.database>
+        <impex.username>RICEMASTER</impex.username>
+        <impex.password>RICEMASTER</impex.password>
+        <impex.database>RICEMASTER</impex.database>
       </properties>
-    </profile>
-    <profile>
-      <id>demo</id>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.kuali.maven.plugins</groupId>
-            <artifactId>sql-maven-plugin</artifactId>
-            <version>1.7</version>
-            <executions>
-              <execution>
-                <id>server-dataset-cleanup</id>
-                <phase>process-resources</phase>
-                <goals>
-                  <goal>execute</goal>
-                </goals>
-                <configuration>
-                  <resourceLocations>
-                    <resourceLocation>classpath:demo/server-dataset-cleanup.sql</resourceLocation>
-                  </resourceLocations>
-                </configuration>
-              </execution>
-            </executions>
-            <dependencies>
-              <dependency>
-                <groupId>org.kuali.rice</groupId>
-                <artifactId>rice-sql</artifactId>
-                <version>${project.version}</version>
-              </dependency>
-            </dependencies>
-          </plugin>
-        </plugins>
-      </build>
     </profile>
   </profiles>
 </project>
