--- a/db/impex/demo/pom.xml
+++ b/db/impex/demo/pom.xml
@@ -31,7 +31,7 @@
             <artifactId>sql-maven-plugin</artifactId>
             <executions>
               <execution>
-                <id>server-dataset-cleanup</id>
+                <id>demo-cleanup</id>
                 <phase>process-resources</phase>
                 <goals>
                   <goal>execute</goal>
