git-svn-id: https://svn.kuali.org/repos/foundation/sandbox/rice-2.0@2618 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/db/impex/pom.xml
+++ b/db/impex/pom.xml
@@ -367,6 +367,13 @@
       </properties>
     </profile>
     <profile>
+      <id>rds</id>
+      <properties>
+        <impex.url>jdbc:oracle:thin:@oracle.rice.kuali.org:1521:ORACLE</impex.url>
+        <impex.dba.url>jdbc:oracle:thin:@oracle.rice.kuali.org:1521:ORACLE</impex.dba.url>
+      </properties>
+    </profile>
+    <profile>
       <id>oracle</id>
       <properties>
         <db.vendor>oracle</db.vendor>
