git-svn-id: https://svn.kuali.org/repos/foundation/sandbox/rice-2.0@2620 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/db/impex/pom.xml
+++ b/db/impex/pom.xml
@@ -370,7 +370,7 @@
       <id>rds</id>
       <properties>
         <impex.url>jdbc:oracle:thin:@oracle.rice.kuali.org:1521:ORACLE</impex.url>
-        <impex.dba.url>jdbc:oracle:thin:@oracle.rice.kuali.org:1521:ORACLE</impex.dba.url>
+        <impex.dba.url>${impex.url}</impex.dba.url>
         <impex.dba.username>master</impex.dba.username>
       </properties>
     </profile>
