--- a/db/impex/master/pom.xml
+++ b/db/impex/master/pom.xml
@@ -22,12 +22,87 @@
   </properties>
   <profiles>
     <profile>
-      <id>rds</id>
+      <id>master</id>
       <properties>
         <impex.username>RICEMASTER</impex.username>
         <impex.password>RICEMASTER</impex.password>
         <impex.database>RICEMASTER</impex.database>
       </properties>
+    </profile>
+    <profile>
+      <id>demo</id>
+      <properties>
+        <impex.username>RICEDEMO</impex.username>
+        <impex.password>RICEDEMO</impex.password>
+        <impex.database>RICEDEMO</impex.database>
+      </properties>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.kuali.maven.plugins</groupId>
+            <artifactId>sql-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>demo-cleanup</id>
+                <phase>process-resources</phase>
+                <goals>
+                  <goal>execute</goal>
+                </goals>
+                <configuration>
+                  <resourceLocations>
+                    <resourceLocation>classpath:demo/server-dataset-cleanup.sql</resourceLocation>
+                  </resourceLocations>
+                </configuration>
+              </execution>
+            </executions>
+            <dependencies>
+              <dependency>
+                <groupId>org.kuali.rice</groupId>
+                <artifactId>rice-sql</artifactId>
+                <version>${project.version}</version>
+              </dependency>
+            </dependencies>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>bootstrap</id>
+      <properties>
+        <impex.username>RICEBOOTSTRAP</impex.username>
+        <impex.password>RICEBOOTSTRAP</impex.password>
+        <impex.database>RICEBOOTSTRAP</impex.database>
+      </properties>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.kuali.maven.plugins</groupId>
+            <artifactId>sql-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>demo-cleanup</id>
+                <phase>process-resources</phase>
+                <goals>
+                  <goal>execute</goal>
+                </goals>
+                <configuration>
+                  <resourceLocations>
+                    <resourceLocation>classpath:demo/server-dataset-cleanup.sql</resourceLocation>
+                    <resourceLocation>classpath:bootstrap/server-dataset-cleanup.sql</resourceLocation>
+                  </resourceLocations>
+                </configuration>
+              </execution>
+            </executions>
+            <dependencies>
+              <dependency>
+                <groupId>org.kuali.rice</groupId>
+                <artifactId>rice-sql</artifactId>
+                <version>${project.version}</version>
+              </dependency>
+            </dependencies>
+          </plugin>
+        </plugins>
+      </build>
     </profile>
   </profiles>
 </project>
