git-svn-id: https://svn.kuali.org/repos/foundation/sandbox/rice-2.0@2624 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/db/impex/master/pom.xml
+++ b/db/impex/master/pom.xml
@@ -44,7 +44,7 @@
             <executions>
               <execution>
                 <id>demo-cleanup</id>
-                <phase>process-resources</phase>
+                <phase>install</phase>
                 <goals>
                   <goal>execute</goal>
                 </goals>
@@ -81,7 +81,7 @@
             <executions>
               <execution>
                 <id>demo-cleanup</id>
-                <phase>process-resources</phase>
+                <phase>install</phase>
                 <goals>
                   <goal>execute</goal>
                 </goals>
