git-svn-id: https://svn.kuali.org/repos/foundation/sandbox/rice-2.0@2631 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/db/impex/master/pom.xml
+++ b/db/impex/master/pom.xml
@@ -43,7 +43,7 @@
             <artifactId>sql-maven-plugin</artifactId>
             <executions>
               <execution>
-                <id>demo-cleanup</id>
+                <id>cleanup</id>
                 <phase>install</phase>
                 <goals>
                   <goal>execute</goal>
@@ -80,7 +80,7 @@
             <artifactId>sql-maven-plugin</artifactId>
             <executions>
               <execution>
-                <id>demo-cleanup</id>
+                <id>cleanup</id>
                 <phase>install</phase>
                 <goals>
                   <goal>execute</goal>
