git-svn-id: https://svn.kuali.org/repos/foundation/sandbox/rice-2.0@2632 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/db/impex/demo/pom.xml
+++ b/db/impex/demo/pom.xml
@@ -21,4 +21,23 @@
     <impex.password>RICEDEMO</impex.password>
     <impex.database>RICEDEMO</impex.database>
   </properties>
+  <profiles>
+    <profile>
+      <id>export</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.kuali.maven.plugins</groupId>
+            <artifactId>maven-impex-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>export</id>
+                <phase>generate-resources</phase>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
