git-svn-id: https://svn.kuali.org/repos/foundation/sandbox/rice-2.0@2633 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/db/impex/pom.xml
+++ b/db/impex/pom.xml
@@ -347,6 +347,9 @@
   <profiles>
     <profile>
       <id>export</id>
+      <properties>
+        <impex.generate.phase>none</impex.generate.phase>
+      </properties>
       <build>
         <plugins>
           <plugin>
