--- a/db/impex/pom.xml
+++ b/db/impex/pom.xml
@@ -368,6 +368,7 @@
                   <schemaXMLFile>${basedir}/src/main/resources/schema.xml</schemaXMLFile>
                   <dataXMLDir>${basedir}/src/main/resources</dataXMLDir>
                   <copyToFile>${basedir}/src/main/resources/data.dtd</copyToFile>
+                  <schema>${impex.database}</schema>
                 </configuration>
               </execution>
             </executions>
