git-svn-id: https://svn.kuali.org/repos/foundation/sandbox/rice-2.0@2636 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/db/impex/bootstrap/pom.xml
+++ b/db/impex/bootstrap/pom.xml
@@ -39,5 +39,11 @@
         </plugins>
       </build>
     </profile>
+    <profile>
+      <id>commit</id>
+      <properties>
+        <scm.phase>process-resources</scm.phase>
+      </properties>
+    </profile>
   </profiles>
 </project>
