git-svn-id: https://svn.kuali.org/repos/foundation/sandbox/rice-2.0@2637 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/db/impex/pom.xml
+++ b/db/impex/pom.xml
@@ -500,6 +500,7 @@
           <plugin>
             <groupId>org.kuali.maven.plugins</groupId>
             <artifactId>maven-scm-plugin</artifactId>
+            <version>1.6</version>
             <configuration>
               <message>Automated Impex update</message>
             </configuration>
