git-svn-id: https://svn.kuali.org/repos/foundation/sandbox/rice-2.0@2638 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/db/impex/pom.xml
+++ b/db/impex/pom.xml
@@ -493,6 +493,7 @@
                 </goals>
                 <configuration>
                   <schemaXMLFile>${project.basedir}/src/main/resources/schema.xml</schemaXMLFile>
+                  <dataDir>${project.basedir}/src/main/resources</dataDir>
                 </configuration>
               </execution>
             </executions>
