git-svn-id: https://svn.kuali.org/repos/foundation/sandbox/rice-2.0@2639 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/db/impex/pom.xml
+++ b/db/impex/pom.xml
@@ -479,6 +479,9 @@
     </profile>
     <profile>
       <id>commit</id>
+      <properties>
+        <impex.generate.phase>none</impex.generate.phase>
+      </properties>
       <build>
         <plugins>
           <plugin>
