git-svn-id: https://svn.kuali.org/repos/foundation/sandbox/rice-2.0@2640 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/db/impex/pom.xml
+++ b/db/impex/pom.xml
@@ -517,7 +517,7 @@
                   <goal>checkin</goal>
                 </goals>
                 <configuration>
-                  <includes>${project.basedir}/src/main/resources/*.xml,${project.basedir}/src/main/resources/*.dtd</includes>
+                  <includes>**/src/main/resources/*.xml,**/src/main/resources/*.dtd</includes>
                 </configuration>
               </execution>
               <execution>
