git-svn-id: https://svn.kuali.org/repos/foundation/sandbox/rice-2.0@2641 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/db/impex/master/pom.xml
+++ b/db/impex/master/pom.xml
@@ -22,6 +22,12 @@
   </properties>
   <profiles>
     <profile>
+      <id>commit</id>
+      <properties>
+        <impex.invalid.phase>none</impex.invalid.phase>
+      </properties>
+    </profile>
+    <profile>
       <id>master</id>
       <properties>
         <impex.username>RICEMASTER</impex.username>
