--- a/db/impex/pom.xml
+++ b/db/impex/pom.xml
@@ -369,6 +369,7 @@
                   <dataXMLDir>${basedir}/src/main/resources</dataXMLDir>
                   <copyToFile>${basedir}/src/main/resources/data.dtd</copyToFile>
                   <schema>${impex.database}</schema>
+                  <antCompatibilityMode>true</antCompatibilityMode>
                 </configuration>
               </execution>
             </executions>
