git-svn-id: https://svn.kuali.org/repos/foundation/sandbox/rice-2.0@2651 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/db/impex/pom.xml
+++ b/db/impex/pom.xml
@@ -533,7 +533,7 @@
                 <phase>${scm.phase}</phase>
                 <configuration>
                   <target>
-                    <echo>Checking out ${impex.data.invalid}</echo>
+                    <echo>Removing ${impex.data.invalid}</echo>
                   </target>
                 </configuration>
                 <goals>
