--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,11 @@
   <parent>
     <groupId>org.kuali</groupId>
     <artifactId>kuali-common</artifactId>
-    <version>15</version>
+    <version>18</version>
   </parent>
   <groupId>org.kuali.maven.plugins</groupId>
   <artifactId>maven-impex-plugin</artifactId>
-  <version>1.0.23</version>
+  <version>1.0.24-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>
   <name>Maven Impex Plugin</name>
   <description>Maven plugin for converting database agnostic XML files into platform specific SQL files and for examining proprietary databases via JDBC to generate database agnostic XML files</description>
@@ -113,8 +113,8 @@
     </dependency>
   </dependencies>
   <scm>
-    <connection>scm:svn:http://svn.kuali.org/repos/foundation/tags/maven-impex-plugin-1.0.23</connection>
-    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/tags/maven-impex-plugin-1.0.23</developerConnection>
-    <url>http://svn.kuali.org/repos/foundation/tags/maven-impex-plugin-1.0.23</url>
+    <connection>scm:svn:http://svn.kuali.org/repos/foundation/branches/maven-impex-plugin-1.0</connection>
+    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/branches/maven-impex-plugin-1.0</developerConnection>
+    <url>http://svn.kuali.org/repos/foundation/branches/maven-impex-plugin-1.0</url>
   </scm>
 </project>
