--- a/db/impex/pom.xml
+++ b/db/impex/pom.xml
@@ -264,7 +264,7 @@
         <plugin>
           <groupId>org.kuali.maven.plugins</groupId>
           <artifactId>maven-impex-plugin</artifactId>
-          <version>1.0.23</version>
+          <version>1.0.24-SNAPSHOT</version>
           <dependencies>
             <dependency>
               <groupId>mysql</groupId>
