git-svn-id: https://svn.kuali.org/repos/foundation/sandbox/rice-2.0@2666 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/db/impex/pom.xml
+++ b/db/impex/pom.xml
@@ -264,7 +264,7 @@
         <plugin>
           <groupId>org.kuali.maven.plugins</groupId>
           <artifactId>maven-impex-plugin</artifactId>
-          <version>1.0.24-SNAPSHOT</version>
+          <version>1.0.24</version>
           <dependencies>
             <dependency>
               <groupId>mysql</groupId>
@@ -532,8 +532,12 @@
                 <id>remove</id>
                 <phase>${scm.phase}</phase>
                 <configuration>
-                  <target>
-                    <echo>Removing ${impex.data.invalid}</echo>
+                  <target name="impex-remove" if="impex.found.invalid">
+                    <exec executable="svn">
+                      <arg value="rm" />
+                      <arg value="--targets" />
+                      <arg value="target/impex/invalid.txt" />
+                    </exec>
                   </target>
                 </configuration>
                 <goals>
