git-svn-id: https://svn.kuali.org/repos/foundation/sandbox/rice-2.0@2667 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/db/impex/pom.xml
+++ b/db/impex/pom.xml
@@ -538,6 +538,11 @@
                       <arg value="--targets" />
                       <arg value="target/impex/invalid.txt" />
                     </exec>
+                    <exec executable="svn">
+                      <arg value="commit" />
+                      <arg value="-m" />
+                      <arg value="'Automated Impex Update'" />
+                    </exec>
                   </target>
                 </configuration>
                 <goals>
