git-svn-id: https://svn.kuali.org/repos/foundation/sandbox/rice-2.0@2670 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/db/impex/pom.xml
+++ b/db/impex/pom.xml
@@ -541,7 +541,7 @@
                     <exec executable="svn">
                       <arg value="commit" />
                       <arg value="-m" />
-                      <arg value="'Automated Impex Update'" />
+                      <arg value="Automated Impex Update" />
                     </exec>
                   </target>
                 </configuration>
