git-svn-id: https://svn.kuali.org/repos/foundation/sandbox/rice-2.0@2671 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/db/impex/pom.xml
+++ b/db/impex/pom.xml
@@ -529,7 +529,7 @@
             <version>1.6</version>
             <executions>
               <execution>
-                <id>remove</id>
+                <id>remove-from-scm</id>
                 <phase>${scm.phase}</phase>
                 <configuration>
                   <target name="impex-remove" if="impex.found.invalid">
