--- a/db/impex/master/pom.xml
+++ b/db/impex/master/pom.xml
@@ -7,7 +7,8 @@
   on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either
   express or implied. See the License for the specific language governing permissions
   and limitations under the License. -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <name>Rice Impex Master</name>
   <modelVersion>4.0.0</modelVersion>
   <parent>
@@ -92,6 +93,7 @@
                   <goal>execute</goal>
                 </goals>
                 <configuration>
+                  <orderFile>false</orderFile>
                   <resourceLocations>
                     <resourceLocation>classpath:demo-server-dataset-cleanup.sql</resourceLocation>
                     <resourceLocation>classpath:bootstrap-server-dataset-cleanup.sql</resourceLocation>
