--- a/db/pom.xml
+++ b/db/pom.xml
@@ -7,7 +7,8 @@
   on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either
   express or implied. See the License for the specific language governing permissions
   and limitations under the License. -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <name>Rice DB</name>
   <modelVersion>4.0.0</modelVersion>
   <parent>
@@ -36,6 +37,10 @@
   </repositories>
   <properties>
     <kuali.testjar.phase>none</kuali.testjar.phase>
+    <gmaven.stubs.phase>none</gmaven.stubs.phase>
+    <gmaven.compile.phase>none</gmaven.compile.phase>
+    <gmaven.test.compile.phase>none</gmaven.test.compile.phase>
+    <maven.test.skip>true</maven.test.skip>
   </properties>
   <build>
     <plugins>
