Set to descending so the sort order matches the order in the pom
git-svn-id: https://svn.kuali.org/repos/foundation/sandbox/rice-2.0@2678 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/db/impex/master/pom.xml
+++ b/db/impex/master/pom.xml
@@ -93,7 +93,7 @@
                   <goal>execute</goal>
                 </goals>
                 <configuration>
-                  <orderFile>false</orderFile>
+                  <orderFile>descending</orderFile>
                   <resourceLocations>
                     <resourceLocation>classpath:demo-server-dataset-cleanup.sql</resourceLocation>
                     <resourceLocation>classpath:bootstrap-server-dataset-cleanup.sql</resourceLocation>
