--- a/cm-tools/.settings/org.eclipse.core.resources.prefs
+++ b/cm-tools/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,3 @@
-#Mon Oct 31 13:31:20 MST 2011
+#Mon Oct 31 13:31:41 MST 2011
 eclipse.preferences.version=1
-encoding//src/main/resources/org/kuali/cm/license/ecl-2.0-license.txt=UTF-8
+encoding//src/main/resources/org/kuali/cm/license/ecl-2.0-header.txt=UTF-8
