--- a/cm-tools/pom.xml
+++ b/cm-tools/pom.xml
@@ -13,7 +13,7 @@
   <parent>
     <groupId>org.kuali</groupId>
     <artifactId>kuali-common</artifactId>
-    <version>15</version>
+    <version>19</version>
   </parent>
   <description>Configuration Management Tools</description>
   <groupId>org.kuali.cm</groupId>
@@ -22,6 +22,7 @@
   <properties>
     <kuali.testjar.phase>none</kuali.testjar.phase>
   </properties>
+  <url>http://${kuali.site.hostname}/cm/${project.version}</url>
   <scm>
     <connection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/cm-tools</connection>
     <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/cm-tools</developerConnection>
